@@ -4,8 +4,10 @@ ChangeLog for ARQ
 ==== ARQ 2.8.1
 
 + Bug fixes
-   + substiution in NOT EXISTS
+   + substitution in NOT EXISTS
+   + substitution in assignment
    + constant folding and logical special forms
+   + bad lock allocation (only occurs under very high load)  
 
 + Speed up processing of nested optionals.  Greatly speeds up BSBM with TDB.
 
